--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,13 @@
-/*Selector Universal*/
+/*--------------Selector Universal----------------*/
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-/*Textos y fuentes en general*/
+/*------------Textos y fuentes en general-------------*/
+
 @font-face {
     font-family: "Futura";
     src: url("../fonts/FuturaPTLight.otf");
@@ -16,7 +18,8 @@
     src: url("../fonts/FuturaPTBold.otf");
 }
 
-/*Body en general*/
+/*------------------Body en general-----------------*/
+
 body{
     font-family: "Futura";
     min-height: 100vh;
@@ -24,49 +27,37 @@ body{
     flex-wrap: wrap;
 }
 
-/*header en general*/
+/*-------------------header en general---------------*/
+
 /* header{
 background-color: #fcbf49;
 margin: 0px;
 width: 100%;
 height: 80px;
 border: 2px solid red;
-} */
+} */ 
 
-/*----------------------Nav Bar------------*/
-.navContainer{
-    background: #fcbf49;
-    width: 100vw;
-    height: 10vh;
+/*----------------------Nav Bar-----------------------*/
+
+/* .navContainer{
+    background: #fcbf49; 
+    width: 100vw;  
+    height: 10vh; 
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: center; 
 }
 
-.navLogo > a{
+.navBar > a{
     text-decoration: none;
+    color: black;
 }
-.navBar{
-    margin-right: 10px;
-}
-
-
 
 .navBar > a{
     margin:10px;
     text-decoration: none;
     color: black;
     font-weight: bolder;
-}
-
-.imgContainer{
-    height: 80vh;
-    width: 100vw;
-}
-
-.imgIndex{
-    height: 80vh;
-     width: 100vw;
 }
 
 @media (max-width: 768px) {
@@ -80,16 +71,15 @@ border: 2px solid red;
 .navBar > a{
     margin:1px;
     font-size: 11px;
-}
-
-    
-}
+}    
+} */
 
 
-/*Logo de Navbar*/
+/*-------------------Logo de Navbar--------------------*/
+
 .logo{
-   /*  padding-left: 10px;
-    margin-top: 20px; */
+    padding-left: 10px;
+    margin-top: 20px;
     font-family: "futura bold";
     color: black;
 }
@@ -113,9 +103,18 @@ margin: 15px;
 }
 
 
+/*-------------------sección index---------------------*/
 
+.imgContainer{
+    height: 80vh;
+    width: 100vw;
+}
 
-/*sección index*/
+.imgIndex{
+    height: 80vh;
+     width: 100vw;
+}
+
 .portada{
     width: 1000px;
     height: 800px;
@@ -129,7 +128,8 @@ margin: 15px;
     
 }
 
-/*sección Work*/
+/*------------------sección Work------------------------*/
+
 .titulo__work{
     font-family: "Futura bold";
     font-size: 50px; 
@@ -224,7 +224,7 @@ margin: 15px;
 } */
 
 
-/*sección About*/
+/*--------------------sección About---------------------*/
 
 .main_about{
     margin: auto;
@@ -270,9 +270,8 @@ margin: auto;
     }
 }
 
+/*-------------------sección News-----------------------*/
 
-
-/*sección News*/
 .titulo__news{
     font-family: "Futura bold";
     font-size: 50px; 
@@ -306,7 +305,8 @@ height: 300px;
     }
 
 
-/*sección Contact*/
+/*-----------------sección Contact----------------------*/
+
 .titulo__contact{
     font-family: "Futura bold";
     font-size: 50px;
@@ -384,7 +384,8 @@ font-size: 18px;
   }
 }
 
-/*footer en general*/
+/*----------------footer en general---------------------*/
+
 footer{
     background-color: black;
     color: white;
